<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/transportradio"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/theseareshipmenttitle"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/these_are_the_details_of_shipment"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/nameofuser"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/nameisheree"
            android:visibility="visible"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/totalamountposted"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/total_amountforonfiirmorefder" />

        <TextView
            android:id="@+id/shippingcostforconstruction"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/shipping_costextraction" />


        <TextView
            android:id="@+id/thecity"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/cityconfirmorder"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/addresshere"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/address"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/stateofconfirmedorder"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/stateoftheconfirmed" />

        <TextView
            android:id="@+id/confirmedordertrader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/traderconfirmedorder" />

        <TextView
            android:id="@+id/traderIDconfirmedhere"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/traderidconfirmedheree" />

        <TextView
            android:id="@+id/productstobeboughtttle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products_boughthere" />


        <TextView
            android:id="@+id/timofpost"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/timewrapup" />

        <Button
            android:id="@+id/confirm_final_order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="450sp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/confirmd"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carseeen" />

        <RadioButton
            android:id="@+id/motor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motorcarhere" />

        <RadioButton
            android:id="@+id/bicycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bicycleishere" />

        <RadioButton
            android:id="@+id/walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walkingishere" />

        <TextView
            android:id="@+id/dateofpost"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/dateofposthere" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/confirmorderrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>