<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cartimageonscreen"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/cartimageonscreen"
                    android:scaleType="centerCrop"
                    android:visibility="visible" />


                <ImageView
                    android:id="@+id/cartproductimageonscreeen"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:contentDescription="@string/cartproductimageonscreen"
                    android:scaleType="centerCrop"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/numberoflikesimage"
                        android:layout_width="50sp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/cart_number_of_likess"
                        android:scaleType="fitCenter"
                        android:visibility="visible"
                        app:srcCompat="@drawable/likeicons"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/therealnumberoflikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="#ecedec"
                        android:padding="8dp"
                        android:text="@string/_23numberoflikes"
                        android:textSize="18sp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/carttheproductprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#ecedec"
                    android:padding="8dp"
                    android:text="@string/cartproductprices" />


                <TextView
                    android:id="@+id/carttradernamehere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#ecedec"
                    android:padding="8dp"
                    android:text="@string/cartthetradername"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cartdescriptionhere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#ecedec"
                    android:padding="8dp"
                    android:text="@string/cartdescriptionhere"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/carttheproductname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="8dp"
                    android:text="@string/carttheproductname"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cartquantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#ecedec"
                    android:padding="8dp"
                    android:text="@string/cartquantity"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>