<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkActivities.ConfirmFinalOrderActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/please_write_your_shipment_detailss"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/shippment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_names"
        android:autofillHints=""
        android:inputType="text" tools:targetApi="o" />

    <EditText
        android:id="@+id/shippment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shippment_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        android:layout_marginRight="20dp"
        android:hint="@string/your_phone_numbers"
        android:autofillHints="" />

    <EditText
        android:id="@+id/shippment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shippment_phone_number"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_home_addresss"
        android:autofillHints=""
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/shippment_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shippment_address"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_city_names"
        android:autofillHints=""
        android:inputType="text" tools:targetApi="o" />


    <Button
        android:id="@+id/confirm_final_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/confirmd"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

</RelativeLayout>