<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="20dp"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/theorderinfohere"
        android:orientation="vertical">
        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:layout_marginStart="2dp" />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/phone_number9"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginRight="2dp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_marginEnd="2dp"
            android:layout_below="@+id/order_user_name" />

        <TextView
            android:id="@+id/productkeyordered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_key9"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/order_phone_number"
            android:gravity="center"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/productnameordered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_date_time"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/date_time9"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Product name" />
        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/productkeyordered"
            android:gravity="center"
            android:layout_marginTop="45dp"
            />

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_city9"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/order_total_price"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time99"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/order_address_city"
            android:gravity="center"
            android:layout_marginTop="15dp"
            />




    </LinearLayout>

    <Button
        android:id="@+id/shipapprove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="10dp"
        android:text="@string/approve9"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:background="@android:color/white"
        android:layout_below="@+id/showallcarteduserproducts"
        />



</RelativeLayout>